# xc32

./: .gitignore  README.md
common-source/build-scripts/: Darwin-image-manifest.txt  Linux32-image-manifest.txt  build-dfp-common.sh  build-pic32c-dfp.sh  build-pic32m-dfp.sh  checkout-common-source.sh  generate-pic32c-xc.h.sh  pic32-copy-part-support-files.sh  pic32-manifest-check.sh  pic32-parts-build-installer.sh  pic32-parts-create-A-image.sh  pic32-parts-create-image.sh  pic32-parts-gen.sh  pic32-parts-inc.sh  pic32-parts-upload.sh  plib-to-image.sh  sam-parts-gen-temp.sh  win32-image-manifest.txt  xc32-build-all.sh  xc32-build-dfp.sh  xc32-clean-install-images.sh  xc32-copy-collateral.sh  xc32-create-branch.sh  xc32-create-source-dist.sh  xc32-extract-xclm.sh  xc32-parts-release.sh  xc32-tag-release.sh
common-source/build-scripts/autolights/: xc32.properties
common-source/build-scripts/bamboo/: bamboo-fossil.sh
common-source/build-scripts/chipkit/: chipkit_sync.sh
common-source/build-scripts/docs/: xc32-build-instructions.txt
common-source/build-scripts/pic32c/: build-pic32c-common.sh  build-pic32c-prerequisites.sh  build-pic32c-specs.sh  build-pic32c-toolchain.sh  checkout-pic32c-source.sh  patch_LanguageToolSuite.py  patch_deviceSupport.py
common-source/build-scripts/pic32m/: build-pic32m-common.sh  build-pic32m-prerequisites.sh  build-pic32m-toolchain.sh  checkout-pic32m-source.sh
common-source/build-scripts/py/: build.xml  ivy.xml  ivysettings.xml  langcommon.py  pic2cfg32.py  pic2lang32bit.py  pic2res.py  xc32-parts-pipeline.py
pic32c-source/: NOTES  README.md
pic32c-source/XC32-arm-gcc/: .gitignore
pic32c-source/binutils/: configure
pic32c-source/gcc/: LAST_UPDATED  Makefile.in  config.sub  configure.ac
pic32c-source/gdb/: Makefile.tpl  config.sub
pic32c-source/installation/: arm-none-eabi-gnu-tools.mpi  build_win_pkg.sh
pic32c-source/mchp/: configure  smartio_suffix.h
pic32c-source/newlib/: config.sub  configure  configure.ac
pic32m-source/binutils/: Makefile.in  Makefile.tpl  config.sub  configure.ac
pic32m-source/build-manual/: How-to-build-toolchain.texi
pic32m-source/gcc/: config-ml.in  configure
pic32m-source/installation/: arm-none-eabi-gnu-tools.nsi
pic32m-source/maintainer-scripts/: pic32c_stampversion  pic32c_versionfiles
pic32m-source/mchp/: Makefile  smart-io.esfx  smartio_suffix.cc
pic32m-source/newlib/: config.guess
pic32m-source/pic32-newlib/: README  config.sub  configure  configure.ac  xc32-build-newlib.sh
src/: ChangeLog  Makefile.def  Makefile.in  Makefile.tpl  config.sub  configure  configure.in
src/bfd/: ChangeLog  archive.c  archures.c  bfd-in2.h  coff-mips.c  config.bfd  configure  configure.in  cpu-mips.c  dwarf2.c  elf-bfd.h  elf.c  elf32-mips.c  elf32-pic32.c  elf64-mips.c  elflink.c  elfn32-mips.c  elfxx-mips.c  elfxx-mips.h  ihex.c  libbfd.h  pic32-options.c  pic32-options.h  reloc.c  section.c  targets.c  version.h
src/binutils/: ChangeLog  Makefile.am  Makefile.in  Makefile.tpl  bin2hex.c  configure  readelf.c  size.c
src/binutils-new/: ChangeLog.csl  Makefile.def  Makefile.in  Makefile.tpl  config.sub  configure  configure.ac  release-notes-csl.xml
src/cloog/: configure  configure.in
src/config/: ChangeLog  mt-pic32  mt-sde
src/convert/: ChangeLog  Makefile.am  Makefile.in  acconfig.h  acinclude.m4  aclocal.m4  bin.c  config.h.in  configure  configure.in  conv.1  conv.texi  convert.c  elf.h  elfio.c  elfmips.h  elfout.c  idtbin.c  lsifast.c  mipsflash.c  srec.c  stagbin.c
src/gas/: ChangeLog  as.c  config.in  configure  configure.in  configure.tgt  read.c
src/gcc/: ChangeLog  ChangeLog.MIPS  Makefile.in  aclocal.m4  alias.c  builtins.c  builtins.def  c-common.c  c-common.h  c-decl.c  c-format.c  c-incpath.c  c-opts.c  c-ppoutput.c  calls.c  cfgloopanal.c  cgraph.c  cgraph.h  cgraphunit.c  collect2.c  combine.c  common.opt  config.gcc  config.host  configure  configure.ac  coverage.c  cppexp.c  cpplib.h  cppspec.c  cse.c  dojump.c  dwarf2out.c  emit-rtl.c  expmed.c  expr.c  expr.h  flags.h  fold-const.c  function.c  (+44 more)
src/gdb/: ChangeLog  Makefile.in  ada-lex.l  amd64-tdep.c  arch-utils.c  arch-utils.h  breakpoint.c  c-exp.y  command.h  configure  configure.in  configure.tgt  cris-tdep.c  d10v-tdep.c  defs.h  disasm.c  disasm.h  dwarf2-frame.c  dwarf2read.c  eval.c  exec.c  f-exp.y  findvar.c  frame.c  gdbarch.c  gdbarch.h  gdbarch.sh  hppa-tdep.c  i386-tdep.c  infcall.c  infcmd.c  infrun.c  jv-exp.y  m2-exp.y  m68hc11-tdep.c  m68k-tdep.c  mdi.h  mdiinit.h  mdimips.h  mips-linux-nat.c  (+49 more)
src/gprof/: ChangeLog  cg_print.c  corefile.c  gmon_io.c  gprof.c  gprof.h  hertz.c  hist.c  mips.c
src/include/: bin-bugs.h
src/ld/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.tgt  ldlang.c
src/libiberty/: ChangeLog  config.table  make-temp-file.c
src/maintainer-scripts/: ChangeLog  c32_stampversion  c32_versionfiles  sde_stampversion-README  sde_versionfiles
src/opcodes/: ChangeLog  mips-dis.c  mips-opc.c  mips16-opc.c
src/readline/: configure.in
src/sdemdi/: ChangeLog  Makefile.in  configure  configure.ac  crt0.S  fileio.c  m32cache.S  mdi.h  mdilow.S  mdisyscall.S  mdixcpt.h  rtpxlite.c  rtpxliteasm.S  rtpxstub.c  sdemdi32.ld  sdemdi32hi.ld  sdemdi64.ld  sdemdi64hi.ld  simlow.S
src/sim/: configure  configure.ac
(+2350 files in other folders)
