dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.12)			dnl Minimum Autoconf version required.
AC_INIT(convert.c)
AC_CANONICAL_SYSTEM

AC_ISC_POSIX

AM_INIT_AUTOMAKE(conv, 3.0.3)

AM_CONFIG_HEADER(config.h)

AM_MAINTAINER_MODE
AC_CYGWIN
AC_EXEEXT

AC_PROG_CC

AC_PROG_INSTALL

AM_PROG_CC_STDC
if test "x${am_cv_prog_cc_stdc}" = "xno"; then
  AC_MSG_ERROR(cannot find ANSI C compiler)
fi

AC_HEADER_STDC
AC_CHECK_FUNCS(strchr strtok memcpy)

AC_CHECK_HEADERS(stddef.h stdlib.h strings.h unistd.h limits.h)
AC_CHECK_HEADERS(fcntl.h sys/file.h)

AC_FUNC_ALLOCA

CONV_BINARY_FOPEN

CONV_NEED_DECLARATION(malloc)
CONV_NEED_DECLARATION(realloc)
CONV_NEED_DECLARATION(free)
CONV_NEED_DECLARATION(strtok)

dnl Checks for compilers, typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

AC_OUTPUT(Makefile)
